# ComfyUI-NIUNIUAPI

./: .gitignore  README.md  __init__.py  newapi_banana2_node.py  pyproject.toml  sora2_niuniu_node.py
.github/workflows/: publish.yml
example_workflows/: SORA2文生视频图生视频角色创建.json  VEO3.1文生视频图生视频收尾帧视频.json  bananaPRO文生图图生图.json  即梦4.5文生图图生图.json
